samples/_failures_safe/1761527885_2b0231_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_355a18b6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_355a18b6.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_355a18b6.c:160:9: error: expected declaration or statement at end of input
